--- a/src/ecmascript.tex
+++ b/src/ecmascript.tex
@@ -92,6 +92,43 @@ ES6从开始制定到最后发布，整整用了15年。
 2015年6月，ECMAScript 6正式通过，成为国际标准。从2000年算起，这时已经过去了15年。
 
 
+\subsection{Strict}
+
+
+ES6 的模块自动采用严格模式，不管有没有在模块头部加上\texttt{"use strict"}。
+
+
+严格模式主要有如下限制：
+
+\begin{compactitem}
+\item 变量必须声明后再使用
+\item 函数的参数不能有同名属性，否则报错
+\item 不能使用with语句
+\item 不能对只读属性赋值，否则报错
+\item 不能使用前缀0表示八进制数，否则报错
+\item 不能删除不可删除的属性，否则报错
+\item 不能删除变量\texttt{delete prop}，会报错，只能删除属性\texttt{delete global[prop]}
+\item eval不会在它的外层作用域引入变量
+\item eval和arguments不能被重新赋值
+\item arguments不会自动反映函数参数的变化
+\item 不能使用arguments.callee
+\item 不能使用arguments.caller
+\item 禁止this指向全局对象
+\item 不能使用fn.caller和fn.arguments获取函数调用的堆栈
+\item 增加了保留字（比如protected、static和interface）
+\end{compactitem}
+
+虽然严格模式是 ES5 引入的，不属于 ES6，但是上面这些限制，ES6模块都必须遵守。
+
+其中，尤其需要注意this的限制。
+
+\begin{compactitem}
+\item ES6 模块之中，顶层的this指向undefined，即不应该在顶层代码使用this。
+\end{compactitem}
+
+
+
+
 \subsection{Variable}
 
 
@@ -99,11 +136,117 @@ ES5只有两种声明变量的方法：var命令和function命令。ES6除了添
 
 
 
+\subsection{Inheritance}
+
+
+模块之间也可以继承。
+
+
+假设有一个circleplus模块，继承了circle模块。
+
+\begin{lstlisting}[language=JavaScript]
+// circleplus.js
+
+export * from 'circle';
+export var e = 2.71828182846;
+export default function(x) {
+  return Math.exp(x);
+}
+\end{lstlisting}
+
+
+上面代码中的export *，表示再输出circle模块的所有属性和方法。注意，export *命令会忽略circle模块的default方法。然后，上面代码又输出了自定义的e变量和默认方法。
+
+这时，也可以将circle的属性或方法，改名后再输出。
+
+
+\begin{lstlisting}[language=JavaScript]
+// circleplus.js
+
+export { area as circleArea } from 'circle';
+\end{lstlisting}
+
+
+
+上面代码表示，只输出circle模块的area方法，且将其改名为circleArea。
+
+加载上面模块的写法如下。
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+// main.js
+
+import * as math from 'circleplus';
+import exp from 'circleplus';
+console.log(exp(math.e));
+\end{lstlisting}
+
+上面代码中的import exp表示，将circleplus模块的默认方法加载为exp方法。
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
 
 
 \chapter{Module}
 
-Python的import和Ruby的require等都确保了模块功能的实现，JavaScript一直缺少模块（Module）的概念，导致当项目规模增大时，JavaScritpt代码变得难以复用且极难维护。
+Python的import、Ruby的require和CSS的@import等都确保了模块功能的实现，JavaScript一直缺少模块（Module）的概念，导致当项目规模增大时，JavaScritpt代码变得难以复用且极难维护。
+
+
+
 
 在ES6发布之前，JavaScript社区就制定了CommonJS（node模块化加载）和AMD（RequireJS）等规范来实现模块加载。
 
@@ -112,73 +255,119 @@ Python的import和Ruby的require等都确保了模块功能的实现，JavaScrip
 \item AMD用于浏览器环境。
 \end{compactitem}
 
-ES6的官方标准中使用export和import来支持模块化开发，至此JavaScript开始正式提供模块支持。
+\section{Overview}
 
 
+历史上，JavaScript 一直没有模块（module）体系，无法将一个大程序拆分成互相依赖的小文件，再用简单的方法拼装起来，现在ES6在语言标准层面上使用export和import实现了模块化功能，至此JavaScript开始正式提供模块支持。
+
+ES6的模块功能支持完全可以取代 CommonJS 和 AMD 规范，并成为浏览器和服务器通用的模块解决方案。
+
+ES6 模块的设计思想是尽量的静态化，使得编译时就能确定模块的依赖关系，以及输入和输出的变量。
+
+\subsection{Object}
+
+
+相比而言，CommonJS 模块和AMD模块都只能在运行时确定上述这些东西。比如，CommonJS 模块就是对象，输入时必须查找对象属性。
+
+
+\begin{lstlisting}[language=JavaScript]
+// CommonJS模块
+let { stat, exists, readFile } = require('fs');
+
+// 等同于ES6
+let _fs = require('fs');
+let stat = _fs.stat;
+let exists = _fs.exists;
+let readFile = _fs.readfile;
+\end{lstlisting}
+
+上面代码的实质是整体加载fs模块（即加载fs的所有方法），生成一个对象（\_fs），然后再从这个对象上面读取3个方法，这种加载称为“运行时加载”，因为只有运行时才能得到这个对象，导致完全没办法在编译时做“静态优化”。
+
+\subsection{Method}
+
+
+ES6 模块不是对象，而是通过export命令显式指定输出的代码，再通过import命令输入。
 
 
 
 
 \begin{lstlisting}[language=JavaScript]
-
+// ES6模块
+import { stat, exists, readFile } from 'fs';
 \end{lstlisting}
 
+上面代码的实质是从fs模块加载3个方法，其他方法不加载。这种加载称为“编译时加载”或者静态加载，即 ES6 可以在编译时就完成模块加载，效率要比 CommonJS 模块的加载方式高。当然，这也导致了没法引用 ES6 模块本身，因为它不是对象。
 
 
-\section{export}
-
-ES6支持一个文件就是一个模块。
-
-一个模块内部的所有变量，对于外界来说是无法获取的，除非使用关键词export对外暴露接口。
-
-export对外暴露的各个接口通过名字来进行区分。例如，下面的示例中的lib.js模块通过sqrt、square、diag向外界暴露了三个接口：
+由于 ES6 模块是编译时加载，使得静态分析成为可能。有了它，就能进一步拓宽 JavaScript 的语法，比如引入宏（macro）和类型检验（type system）这些只能靠静态分析实现的功能。
 
 
+除了静态加载带来的各种好处，ES6 模块还有以下好处：
 
-\begin{example}
-export向外界暴露接口
-\begin{lstlisting}[language=JavaScript]
-//-----lib.js----
-/*
-暴露三个接口给外界
-*/
-export const sqrt = Math.sqrt;
-export function square(x) {
-   return x * x;
-}
-export function diag(x,y) {
-   return sqrt(square(x) + square(y));
-}
-\end{lstlisting}
-\end{example}
-
-export支持使用大括号的方式指定要向外界暴露的接口，例如：
+\begin{compactitem}
+\item 不再需要UMD模块格式了，将来服务器和浏览器都会支持 ES6 模块格式。目前，通过各种工具库，其实已经做到了这一点。
+\item 将来浏览器的新 API 就能用模块格式提供，不再必须做成全局变量或者navigator对象的属性。
+\item 不再需要对象作为命名空间（比如Math对象），未来这些功能可以通过模块提供。
+\end{compactitem}
 
 
+模块功能主要由两个命令构成：export和import，而且二者支持as别名。
 
+\begin{compactitem}
+\item export命令用于规定模块的对外接口；
+\item import命令用于输入其他模块提供的功能。
+\end{compactitem}
 
 
 
 \begin{lstlisting}[language=JavaScript]
-//-----lib.js----
-/*
-以大括号形式暴露三个接口给外界
-*/
-const sqrt = Math.sqrt;
-function square(x) {
-   return x * x;
-}
-function diag(x,y) {
-   return sqrt(square(x) + square(y));
-}
+function v1() { ... }
+function v2() { ... }
 
-export { sqrt, square, diag };
+export {
+  v1 as streamV1,
+  v2 as streamV2,
+  v2 as streamLatestVersion
+}
 \end{lstlisting}
+
+\begin{compactitem}
+\item export使用as关键字，重命名了函数v1和v2的对外接口。重命名后，v2可以用不同的名字输出两次。
+\end{compactitem}
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+\subsection{Scope}
+
+
+\begin{compactitem}
+\item export和import命令可以出现在模块的任何位置，只要处于模块顶层就可以；
+\item export和import命令处于块级作用域内的时候，就会报错。
+\end{compactitem}
+
+
+如果export和import处于条件代码块之中，就没法做静态优化了，违背了ES6模块的设计初衷。
+
+\begin{lstlisting}[language=JavaScript]
+function foo() {
+  export default 'bar' // SyntaxError
+}
+foo()
+\end{lstlisting}
+
+上面代码中，export语句放在函数之中，结果报错。
+
+
+
+\section{Alias}
+
 
 \subsection{as}
 
 
-export支持使用as语法进行别名export，这样就可以把一个接口通过多个名字对外暴露。
+通常情况下，export输出的变量除了是本来的名字之外，export也支持使用as语法进行别名export，这样就可以把一个接口通过多个名字对外暴露。
 
 \begin{lstlisting}[language=JavaScript]
 // ---- lib.js ----
@@ -187,31 +376,73 @@ const sqrt = Math.sqrt;
 export { sqrt as sq1, sqrt as sq2 };
 \end{lstlisting}
 
-ES6模块规范规定，如果b模块从a模块导入一个原始值后，在a模块中修改这个原始值，那么b模块中的值也会与a模块中最新的值保持同步，即export暴露的接口与其在模块内部对应的值是一种动态绑定的关系，通过接口可以获取模块内部实时的值。
+和CommonJS规范完全不同的是，ES6模块规范规定，如果b模块从a模块导入一个原始值后，在a模块中修改这个原始值，那么b模块中的值也会与a模块中最新的值保持同步，即export暴露的接口与其在模块内部对应的值是动态绑定的关系，通过接口可以获取模块内部实时的值。例如，下面的示例代码输出变量foo，值为bar，500毫秒之后变成baz。
 
 
-\section{import}
-
-在使用export对外界暴露接口后，其他的JavaScript文件就可以通过import命令加载这个模块（文件）。例如，在main.js模块中就可以通过import导入lib.js暴露的接口：
-
-
-\begin{example}
-import导入其他ES6文件暴露的接口
 \begin{lstlisting}[language=JavaScript]
-// ---- main.js ----
-/* 
-通过import语法从lib模块中导入所需要的接口
-*/
-import { square, diag } from './lib';
-console.log(square(11)); // 121
-console.log(diag(4,3)); // 5
+export var foo = 'bar';
+setTimeout(() => foo = 'baz', 500);
 \end{lstlisting}
-\end{example}
 
-导入外部接口时，大括号中的接口名必须已经通过export关键字导出。
+\begin{compactitem}
+\item CommonJS 模块输出的是值的缓存，不存在动态更新
+\item ES6模块输出的是和模块内部动态绑定的值，存在动态更新。
+\end{compactitem}
 
 
-\subsection{as}
+需要特别注意的是，export命令规定的是对外的接口，必须与模块内部的变量建立一一对应关系。
+
+
+\begin{lstlisting}[language=JavaScript]
+// 报错
+export 1;
+
+// 报错
+var m = 1;
+export m;
+\end{lstlisting}
+
+上面两种写法都会报错，因为没有提供对外的接口。第一种写法直接输出1，第二种写法通过变量m，还是直接输出1。1只是一个值，不是接口。正确的写法是下面这样。
+
+\begin{compactenum}
+\item 写法1
+
+\begin{lstlisting}[language=JavaScript]
+export var m = 1;
+\end{lstlisting}
+
+\item 写法2
+
+\begin{lstlisting}[language=JavaScript]
+var m = 1;
+export {m};
+\end{lstlisting}
+
+\item 写法3
+
+\begin{lstlisting}[language=JavaScript]
+var n = 1;
+export {n as m};
+\end{lstlisting}
+\end{compactenum}
+
+上面三种写法都是正确的，规定了对外的接口m。其他脚本可以通过这个接口，取到值1。它们的实质是，在接口名与模块内部变量之间，建立了一一对应的关系。
+
+同样的，function和class的输出，也必须遵守这样的写法。
+
+\begin{lstlisting}[language=JavaScript]
+// 报错
+function f() {}
+export f;
+
+// 正确
+export function f() {};
+
+// 正确
+function f() {}
+export {f};
+\end{lstlisting}
+
 
 import也支持使用as语法对导入的变量进行重命名。
 
@@ -261,6 +492,9 @@ console.log(lib.myVar2);
 new lib.MyClass();
 \end{lstlisting}
 
+
+
+
 \subsection{default}
 
 默认情况下，使用模块接口时必须要知道该模块导出了哪些接口，对于只暴露一个接口的模块实际上就没有必要限定暴露的接口名字，因此ES6支持使用\texttt{export default}语法让接口调用者自定义要导入的接口名字。
@@ -279,7 +513,7 @@ myFunc();
 \end{lstlisting}
 \end{example}
 
-从本质上来说，export default就是输出一个名为default的变量或方法，然后系统允许对其进行重命名。
+从本质上来说，export default就是输出一个名为default的变量或方法，然后系统允许对其进行重命名，因此export default的意义是可以让开发者更直观的引入模块。
 
 
 
@@ -293,15 +527,138 @@ function add(x,y) {
 export { add as default };
 // 等同于
 export default add; 
+//执行add
+> add(2,3)
+6
 
 // ---- main.js ----
 import { default as myAdd } from 'lib';
 // 等同于
 import myAdd from 'lib';
+// 执行myAdd
+> myAdd(2,3);
+6
 \end{lstlisting}
 
 
-export default可以更直观的表示引入模块时，例如jQuery可以以下面的方式来引入：
+
+
+使用import命令的时候，用户需要知道所要加载的变量名或函数名，否则无法加载，现在ES6的export default命令可以为模块指定默认输出，这样当其他模块加载该模块时，import命令就可以为该匿名函数指定任意名字。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+// export-default.js
+export default function () {
+  console.log('foo');
+}
+
+// import-default.js
+import customName from './export-default';
+customName(); // 'foo'
+\end{lstlisting}
+
+
+export default命令用在非匿名函数前，也是可以的。
+
+\begin{lstlisting}[language=JavaScript]
+// export-default.js
+export default function foo() {
+  console.log('foo');
+}
+
+// 或者写成
+
+function foo() {
+  console.log('foo');
+}
+
+export default foo;
+\end{lstlisting}
+
+上面代码中，foo函数的函数名foo，在模块外部是无效的。加载的时候，视同匿名函数加载。
+
+
+下面比较一下默认输出和正常输出。
+
+\begin{lstlisting}[language=JavaScript]
+// 第一组
+export default function crc32() { // 输出
+  // ...
+}
+
+import crc32 from 'crc32'; // 输入
+
+// 第二组
+export function crc32() { // 输出
+  // ...
+};
+
+import {crc32} from 'crc32'; // 输入
+\end{lstlisting}
+
+上面代码的两组写法，第一组是使用export default时，对应的import语句不需要使用大括号；第二组是不使用export default时，对应的import语句需要使用大括号。
+
+export default命令用于指定模块的默认输出。显然，一个模块只能有一个默认输出，因此export default命令只能使用一次。所以，import命令后面才不用加大括号，因为只可能对应一个方法。
+
+本质上，export default就是输出一个叫做default的变量或方法，然后系统允许你为它取任意名字。所以，下面的写法是有效的。
+
+\begin{lstlisting}[language=JavaScript]
+// modules.js
+function add(x, y) {
+  return x * y;
+}
+export {add as default};
+// 等同于
+// export default add;
+
+// app.js
+import { default as xxx } from 'modules';
+// 等同于
+// import xxx from 'modules';
+\end{lstlisting}
+
+
+export default命令其实只是输出一个叫做default的变量，所以它后面不能跟变量声明语句。
+
+
+\begin{lstlisting}[language=JavaScript]
+// 正确
+export var a = 1;
+
+// 正确
+var a = 1;
+export default a;
+
+// 错误
+export default var a = 1;
+\end{lstlisting}
+
+
+上面代码中，export default a的含义是将变量a的值赋给变量default。所以，最后一种写法会报错。
+
+同样地，因为export default本质是将该命令后面的值，赋给default变量以后再默认，所以直接将一个值写在export default之后。
+
+
+\begin{lstlisting}[language=JavaScript]
+// 正确
+export default 42;
+
+// 报错
+export 42;
+\end{lstlisting}
+
+上面代码中，后一句报错是因为没有指定对外的接口，而前一句指定外对接口为default。
+
+有了export default命令，输入模块时就非常直观了，以输入 lodash 模块为例。
+
+\begin{lstlisting}[language=JavaScript]
+import _ from 'lodash';
+\end{lstlisting}
+
+
+
+同样地，jQuery可以以下面的方式来引入：
 
 
 
@@ -310,7 +667,40 @@ export default可以更直观的表示引入模块时，例如jQuery可以以下
 import $ from 'jquery';
 \end{lstlisting}
 
+如果想在一条import语句中，同时输入默认方法和其他变量，可以写成下面这样。
 
+
+\begin{lstlisting}[language=JavaScript]
+import _, { each } from 'lodash';
+\end{lstlisting}
+
+对应上面代码的export语句如下。
+
+
+\begin{lstlisting}[language=JavaScript]
+export default function (obj) {
+  // ···
+}
+
+export function each(obj, iterator, context) {
+  // ···
+}
+
+export { each as forEach };
+\end{lstlisting}
+
+上面代码的最后一行的意思是，暴露出forEach接口，默认指向each接口，即forEach和each指向同一个方法。
+
+export default也可以用来输出类。
+
+\begin{lstlisting}[language=JavaScript]
+// MyClass.js
+export default class { ... }
+
+// main.js
+import MyClass from 'MyClass';
+let o = new MyClass();
+\end{lstlisting}
 
 Vue.js采用export和import来进行模块化开发，代码通过export暴露接口并import引用其他文件中的功能。例如，下面是Vue.js的入口文件/src/core/index.js的内容：
 
@@ -346,6 +736,544 @@ export function limitBy(...) {}
 import { orderBy, filterBy, limitBy } from './array-filters'
 \end{lstlisting}
 
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+\section{export}
+
+ES6支持一个文件就是一个模块。
+
+
+
+
+
+
+\subsection{Variable}
+
+
+
+一个模块内部的所有变量，对于外界来说是无法获取的，除非使用关键词export对外暴露接口（或变量）。
+
+
+\begin{example}
+export向外界暴露变量
+\begin{lstlisting}[language=JavaScript]
+//-----profile.js----
+/*
+暴露三个变量给外界
+*/
+export var firstName = 'Michael';
+export var lastName = 'Jackson';
+export var year = 1989;
+
+// 或者
+export { firstName, lastName, year };
+
+// ----main.js----
+import {firstName, lastName, year} from './profile';
+
+function setName(element) {
+   element.textContent = firstName + ' ' + lastName;
+}
+\end{lstlisting}
+\end{example}
+
+
+\subsection{Function}
+
+
+export对外暴露的各个接口通过名字来进行区分。例如，下面的示例中的lib.js模块通过sqrt、square、diag向外界暴露了三个接口：
+
+
+
+\begin{example}
+export向外界暴露接口
+\begin{lstlisting}[language=JavaScript]
+//-----lib.js----
+/*
+暴露三个接口给外界
+*/
+export const sqrt = Math.sqrt;
+export function square(x) {
+   return x * x;
+}
+export function diag(x,y) {
+   return sqrt(square(x) + square(y));
+}
+\end{lstlisting}
+\end{example}
+
+export支持使用大括号的方式指定要向外界暴露的接口，例如：
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+//-----lib.js----
+/*
+以大括号形式暴露三个接口给外界
+*/
+const sqrt = Math.sqrt;
+function square(x) {
+   return x * x;
+}
+function diag(x,y) {
+   return sqrt(square(x) + square(y));
+}
+
+export { sqrt, square, diag };
+\end{lstlisting}
+
+注意，应该优先考虑使用大括号的写法来指定要export给外界的变量或接口。
+
+\subsection{Class}
+
+export支持输出变量、函数或类（class）。
+
+
+
+
+\section{import}
+
+在使用export从模块对外界暴露接口后，其他的JavaScript文件就可以通过import命令加载这个模块（文件）。例如，在main.js模块中就可以通过import导入lib.js暴露的接口：
+
+
+\begin{example}
+import导入其他ES6文件暴露的接口
+\begin{lstlisting}[language=JavaScript]
+// ---- main.js ----
+/* 
+通过import语法从lib模块中导入所需要的接口
+*/
+import { square, diag } from './lib';
+console.log(square(11)); // 121
+console.log(diag(4,3)); // 5
+\end{lstlisting}
+\end{example}
+
+除了指定加载某个输出值，import还可以使用整体加载，即用星号（*）指定一个对象，所有输出值都加载在这个对象上面。
+
+
+下面是一个circle.js文件，它输出两个方法area和circumference。
+
+\begin{lstlisting}[language=JavaScript]
+// circle.js
+
+export function area(radius) {
+  return Math.PI * radius * radius;
+}
+
+export function circumference(radius) {
+  return 2 * Math.PI * radius;
+}
+\end{lstlisting}
+
+
+现在，加载这个模块。
+
+\begin{lstlisting}[language=JavaScript]
+// main.js
+
+import { area, circumference } from './circle';
+
+console.log('圆面积：' + area(4));
+console.log('圆周长：' + circumference(14));
+\end{lstlisting}
+
+上面写法是逐一指定要加载的方法，整体加载的写法如下。
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+import * as circle from './circle';
+
+console.log('圆面积：' + circle.area(4));
+console.log('圆周长：' + circle.circumference(14));
+\end{lstlisting}
+
+注意，模块整体加载所在的那个对象（上例是circle），应该是可以静态分析的，所以不允许运行时改变。下面的写法都是不允许的。
+
+
+\begin{lstlisting}[language=JavaScript]
+import * as circle from './circle';
+
+// 下面两行都是不允许的
+circle.foo = 'hello';
+circle.area = function () {};
+\end{lstlisting}
+
+
+
+
+\subsection{Variable}
+
+
+import导入外部接口时，大括号中的接口（或变量）必须已经通过export关键字导出，名字也必须相同。
+
+
+\begin{example}
+import导入其他ES6文件暴露的变量
+\begin{lstlisting}[language=JavaScript]
+// ----main.js----
+import {firstName, lastName, year} from './profile';
+
+function setName(element) {
+  element.textContent = firstName + ' ' + lastName;
+}
+\end{lstlisting}
+\end{example}
+
+
+import命令支持使用as关键字，将输入的变量重命名。
+
+\begin{lstlisting}[language=JavaScript]
+import { lastName as surname } from './profile';
+\end{lstlisting}
+
+
+\subsection{Function}
+
+
+
+import后面的from指定模块文件的位置，可以是相对路径，也可以是绝对路径，.js路径可以省略。如果只是模块名，不带有路径，那么必须有配置文件，告诉 JavaScript 引擎该模块的位置。
+
+\begin{lstlisting}[language=JavaScript]
+import {myMethod} from 'util';
+\end{lstlisting}
+
+上面代码中，util是模块文件名，由于不带有路径，必须通过配置，告诉引擎怎么取到这个模块。
+
+注意，import命令具有提升效果，会提升到整个模块的头部，首先执行。
+
+\begin{lstlisting}[language=JavaScript]
+foo();
+
+import { foo } from 'my_module';
+\end{lstlisting}
+
+
+上面的代码不会报错，因为import的执行早于foo的调用。这种行为的本质是，import命令是编译阶段执行的，在代码运行之前。
+
+
+
+由于import是静态执行，所以不能使用表达式和变量，这些只有在运行时才能得到结果的语法结构。
+
+
+\begin{lstlisting}[language=JavaScript]
+// 报错
+import { 'f' + 'oo' } from 'my_module';
+
+// 报错
+let module = 'my_module';
+import { foo } from module;
+
+// 报错
+if (x === 1) {
+  import { foo } from 'module1';
+} else {
+  import { foo } from 'module2';
+}
+\end{lstlisting}
+
+
+上面三种写法都会报错，因为它们用到了表达式、变量和if结构。在静态分析阶段，这些语法都是没法得到值的。
+
+最后，import语句会执行所加载的模块，因此可以有下面的写法。
+
+\begin{lstlisting}[language=JavaScript]
+import 'lodash';
+\end{lstlisting}
+
+
+上面代码仅仅执行lodash模块，但是不输入任何值。
+
+如果多次重复执行同一句import语句，那么只会执行一次，而不会执行多次。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+import 'lodash';
+import 'lodash';
+\end{lstlisting}
+
+上面代码加载了两次lodash，但是只会执行一次。
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+import { foo } from 'my_module';
+import { bar } from 'my_module';
+
+// 等同于
+import { foo, bar } from 'my_module';
+\end{lstlisting}
+
+上面代码中，虽然foo和bar在两个语句中加载，但是它们对应的是同一个my\_module实例。也就是说，import语句是 Singleton 模式。
+
+
+如果在一个模块之中，先输入后输出同一个模块，import语句可以与export语句写在一起。
+
+
+\begin{lstlisting}[language=JavaScript]
+export { foo, bar } from 'my_module';
+
+// 等同于
+import { foo, bar } from 'my_module';
+export { foo, bar };
+\end{lstlisting}
+
+上面代码中，export和import语句可以结合在一起，写成一行。
+
+模块的接口改名和整体输出，也可以采用这种写法。
+
+\begin{lstlisting}[language=JavaScript]
+// 接口改名
+export { foo as myFoo } from 'my_module';
+
+// 整体输出
+export * from 'my_module';
+\end{lstlisting}
+
+
+默认接口的写法如下。
+
+\begin{lstlisting}[language=JavaScript]
+export { default } from 'foo';
+\end{lstlisting}
+
+具名接口改为默认接口的写法如下。
+
+
+\begin{lstlisting}[language=JavaScript]
+export { es6 as default } from './someModule';
+
+// 等同于
+import { es6 } from './someModule';
+export default es6;
+\end{lstlisting}
+
+同样地，默认接口也可以改名为具名接口。
+
+
+\begin{lstlisting}[language=JavaScript]
+export { default as es6 } from './someModule';
+\end{lstlisting}
+
+下面三种import语句，没有对应的复合写法。
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+import * as someIdentifier from "someModule";
+import someIdentifier from "someModule";
+import someIdentifier, { namedIdentifier } from "someModule";
+\end{lstlisting}
+
+
+现在已经提案提出补上这三种复合写法来做到形式的对称：
+
+\begin{lstlisting}[language=JavaScript]
+export * as someIdentifier from "someModule";
+export someIdentifier from "someModule";
+export someIdentifier, { namedIdentifier } from "someModule";
+\end{lstlisting}
+
+
+\section{import()}
+
+
+
+import命令会被 JavaScript 引擎静态分析，先于模块内的其他模块执行（叫做”连接“更合适）。所以，下面的代码会报错。
+
+
+\begin{lstlisting}[language=JavaScript]
+// 报错
+if (x === 2) {
+  import MyModual from './myModual';
+}
+\end{lstlisting}
+
+
+上面代码中，引擎处理import语句是在编译时，这时不会去分析或执行if语句，所以import语句放在if代码块之中毫无意义，因此会报句法错误，而不是执行时错误。也就是说，import和export命令只能在模块的顶层，不能在代码块之中（比如，在if代码块之中，或在函数之中）。
+
+这样的设计，固然有利于编译器提高效率，但也导致无法在运行时加载模块。从语法上，条件加载就不可能实现。如果import命令要取代 Node 的require方法，这就形成了一个障碍。因为require是运行时加载模块，import命令无法取代require的动态加载功能。
+
+\begin{lstlisting}[language=JavaScript]
+const path = './' + fileName;
+const myModual = require(path);
+\end{lstlisting}
+
+
+上面的语句就是动态加载，require到底加载哪一个模块，只有运行时才知道。import语句做不到这一点。因此，有一个提案，建议引入import()函数，完成动态加载。
+
+
+\begin{lstlisting}[language=JavaScript]
+import(specifier)
+\end{lstlisting}
+
+上面代码中，import函数的参数specifier，指定所要加载的模块的位置。import命令能够接受什么参数，import()函数就能接受什么参数，两者区别主要是后者为动态加载。
+
+import()返回一个 Promise 对象。下面是一个例子。
+
+\begin{lstlisting}[language=JavaScript]
+const main = document.querySelector('main');
+
+import(`./section-modules/${someVariable}.js`)
+  .then(module => {
+    module.loadPageInto(main);
+  })
+  .catch(err => {
+    main.textContent = err.message;
+  });
+\end{lstlisting}
+
+
+import()函数可以用在任何地方，不仅仅是模块，非模块的脚本也可以使用。它是运行时执行，也就是说，什么时候运行到这一句，也会加载指定的模块。另外，import()函数与所加载的模块没有静态连接关系，这点也是与import语句不相同。
+
+import()类似于 Node 的require方法，区别主要是前者是异步加载，后者是同步加载。
+
+
+下面是import()的一些适用场合。
+
+\subsection{按需加载}
+
+
+import()可以在需要的时候，再加载某个模块。
+
+
+\begin{lstlisting}[language=JavaScript]
+button.addEventListener('click', event => {
+  import('./dialogBox.js')
+  .then(dialogBox => {
+    dialogBox.open();
+  })
+  .catch(error => {
+    /* Error handling */
+  })
+});
+\end{lstlisting}
+
+上面代码中，import()方法放在click事件的监听函数之中，只有用户点击了按钮，才会加载这个模块。
+
+\subsection{条件加载}
+
+import()可以放在if代码块，根据不同的情况，加载不同的模块。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+if (condition) {
+  import('moduleA').then(...);
+} else {
+  import('moduleB').then(...);
+}
+\end{lstlisting}
+
+上面代码中，如果满足条件，就加载模块 A，否则加载模块 B。
+
+\subsection{动态的模块路径}
+
+import()允许模块路径动态生成。
+
+\begin{lstlisting}[language=JavaScript]
+import(f())
+.then(...);
+\end{lstlisting}
+
+上面代码中，根据函数f的返回结果，加载不同的模块。
+
+import()加载模块成功以后，这个模块会作为一个对象，当作then方法的参数。因此，可以使用对象解构赋值的语法，获取输出接口。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+import('./myModule.js')
+.then(({export1, export2}) => {
+  // ...·
+});
+\end{lstlisting}
+
+上面代码中，export1和export2都是myModule.js的输出接口，可以解构获得。
+
+如果模块有default输出接口，可以用参数直接获得。
+
+
+\begin{lstlisting}[language=JavaScript]
+import('./myModule.js')
+.then(myModule => {
+  console.log(myModule.default);
+});
+\end{lstlisting}
+
+上面的代码也可以使用具名输入的形式。
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+import('./myModule.js')
+.then(({default: theDefault}) => {
+  console.log(theDefault);
+});
+\end{lstlisting}
+
+
+如果想同时加载多个模块，可以采用下面的写法。
+
+\begin{lstlisting}[language=JavaScript]
+Promise.all([
+  import('./module1.js'),
+  import('./module2.js'),
+  import('./module3.js'),
+])
+.then(([module1, module2, module3]) => {
+   ···
+});
+\end{lstlisting}
+
+
+import()也可以用在 async 函数之中。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+async function main() {
+  const myModule = await import('./myModule.js');
+  const {export1, export2} = await import('./myModule.js');
+  const [module1, module2, module3] =
+    await Promise.all([
+      import('./module1.js'),
+      import('./module2.js'),
+      import('./module3.js'),
+    ]);
+}
+main();
+\end{lstlisting}
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
 
 
 \chapter{Scope}
@@ -933,34 +1861,6 @@ let x = do {
 上面代码中，变量x会得到整个块级作用域的返回值。
 
 
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
 
 \section{const}
 
@@ -983,6 +1883,67 @@ Uncaught TypeError: Assignment to constant variable.
 \end{lstlisting}
 
 上面代码表明改变常量的值会报错。
+
+虽然const声明的常量只在当前代码块有效，但是如果想设置跨模块的常量（即跨多个文件），或者说一个值要被多个模块共享，可以采用下面的写法。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+// constants.js 模块
+export const A = 1;
+export const B = 3;
+export const C = 4;
+
+// test1.js 模块
+import * as constants from './constants';
+console.log(constants.A); // 1
+console.log(constants.B); // 3
+
+// test2.js 模块
+import {A, B} from './constants';
+console.log(A); // 1
+console.log(B); // 3
+\end{lstlisting}
+
+如果要使用的常量非常多，可以建一个专门的constants目录，将各种常量写在不同的文件里面，保存在该目录下。
+
+\begin{lstlisting}[language=JavaScript]
+// constants/db.js
+export const db = {
+  url: 'http://my.couchdbserver.local:5984',
+  admin_username: 'admin',
+  admin_password: 'admin password'
+};
+
+// constants/user.js
+export const users = ['root', 'admin', 'staff', 'ceo', 'chief', 'moderator'];
+\end{lstlisting}
+
+然后，将这些文件输出的常量，合并在index.js里面。
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+// constants/index.js
+export {db} from './db';
+export {users} from './users';
+\end{lstlisting}
+
+使用的时候，直接加载index.js就可以了。
+
+
+\begin{lstlisting}[language=JavaScript]
+// script.js
+import {db, users} from './constants';
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
 
 
 \subsection{Variable}
