--- a/src/kitchen.tex
+++ b/src/kitchen.tex
@@ -3,751 +3,6 @@
 \chapter{Overview}
 
 
-\section{Node}
-
-
-\begin{lstlisting}[language=bash]
-$ curl -sL https://deb.nodesource.com/setup_7.x | sudo -E bash -
-$ sudo apt-get install -y nodejs
-$ node -v
-v7.5.0
-$ nodejs -v
-v7.5.0
-$ npm -v
-4.1.2
-\end{lstlisting}
-
-
-\section{NPM}
-
-\begin{lstlisting}[language=bash]
-$ npm install -g npm@latest
-$ npm -v
-4.1.2
-\end{lstlisting}
-
-进入/path/to/hitour/themes/kitchen安装项目依赖：
-
-
-\begin{lstlisting}[language=bash]
-$ cd /path/to/hitour/themes/kitchen
-$ sudo npm i
-\end{lstlisting}
-
-\begin{figure}[htbp]
-\centering
-\includegraphics[scale=0.4]{kitchen-dependence.png}
-\caption{kitchen项目前端依赖关系}
-\end{figure}
-
-
-创建本地的前端开发服务器配置文件/path/to/hitour/themes/kitchen/config/index.js，index.js的内容如下：
-
-\begin{lstlisting}[language=JavaScript]
-var path = require('path')
-
-var common_proxy = {
-  //target       : 'http://test.hitour.cc',
-  //target       : 'http://sandbox.hitour.cc',
-  target: 'http://trial.hitour.cc',
-  // target       : 'http://hitour.host',
-  changeOrigin: true,
-  pathRewrite: {}
-};
-
-module.exports = {
-  build: {
-    env: require('./prod.env'),
-    index: path.resolve(__dirname, '../dist/index.html'),
-    assetsRoot: path.resolve(__dirname, '../dist'),
-    assetsSubDirectory: 'static',
-    assetsPublicPath: '/themes/kitchen/dist/',
-    productionSourceMap: true,
-    productionGzip: false,
-    productionGzipExtensions: ['js', 'css']
-  },
-  dev: {
-    env: require('./dev.env'),
-    port: 60003,
-    assetsSubDirectory: 'static',
-    assetsPublicPath: '/',
-    proxyTable: {
-      '/admin/': common_proxy,
-      '/chef/': common_proxy,
-      '/themes': common_proxy,
-      '/markMi/': common_proxy
-    },
-    cssSourceMap: false
-  }
-}
-\end{lstlisting}
-
-在/path/to/hitour/themes/kitchen目录下启动本地测试服务器，并且在\url{http://localhost:10003/k/sign\_in}进行测试。
-
-\begin{lstlisting}[language=bash]
-$ cd /path/to/hitour/themes/kitchen
-$ npm run dev
-\end{lstlisting}
-
-如果本地测试通过，可以执行\texttt{npm run build}进行发布。
-
-\begin{lstlisting}[language=bash]
-$ cd /path/to/hitour/themes/kitchen
-$ npm run build
-\end{lstlisting}
-
-注意，在本地或远程服务器做发布之前, 需要确认Yii的路由配置。
-
-\subsection{access}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{adduser}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{bin}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{bugs}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{c}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{cache}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{completion}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{config}
-
-
-\begin{lstlisting}[language=bash]
-$ npm config list
-
-\end{lstlisting}
-
-\subsection{ddp}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{dedupe}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{deprecate}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{dist-tag}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{docs}
-
-
-
-\begin{lstlisting}[language=bash]
-$ npm docs vue
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=bash]
-$ npm docs webpack
-\end{lstlisting}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{doctor}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{edit}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{explore}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{get}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{help}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{help-search}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{i}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{init}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{install}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{install-test}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{it}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{link}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{list}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{ln}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{login}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{logout}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{ls}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{outdated}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-\subsection{owner}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{pack}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{ping}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{prefix}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{prune}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{publish}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{rb}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{rebuild}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{repo}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{restart}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{root}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{run}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{run-script}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{s}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-\subsection{se}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{search}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{set}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{shrinkwrap}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{star}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{stars}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{start}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{stop}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-\subsection{t}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{team}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{test}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{tst}
-
-
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{un}
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{uninstall}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{unpublish}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{unstar}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{up}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{update}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{v}
-
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\subsection{version}
-
-\begin{lstlisting}[language=bash]
-$ npm version
-{
-  npm: '4.1.2',
-  ares: '1.10.1-DEV',
-  cldr: '29.0',
-  http_parser: '2.7.0',
-  icu: '57.1',
-  modules: '51',
-  node: '7.5.0',
-  openssl: '1.0.2k',
-  tz: '2016b',
-  unicode: '8.0',
-  uv: '1.10.2',
-  v8: '5.4.500.48',
-  zlib: '1.2.8' 
-}
-\end{lstlisting}
-
-\subsection{view}
-
-
-\begin{lstlisting}[language=bash]
-$ npm view vue version
-2.1.10
-$ npm view vue-cli version
-2.8.1
-$ npm view vue-router version
-2.20
-$ npm view vue-resource version
-1.2.0
-$ npm view webpack version
-2.2.1
-\end{lstlisting}
-
-\subsection{whoami}
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-
-\section{CNPM}
-
-可以使用定制的 cnpm (gzip 压缩支持) 命令行工具代替默认的 npm:
-
-\begin{lstlisting}[language=bash]
-$ npm install -g cnpm --registry=https://registry.npm.taobao.org
-\end{lstlisting}
-
-或者直接通过添加 npm 参数 alias 一个新命令:
-
-\begin{lstlisting}[language=bash]
-$ alias cnpm="npm --registry=https://registry.npm.taobao.org \
---cache=$HOME/.npm/.cache/cnpm \
---disturl=https://npm.taobao.org/dist \
---userconfig=$HOME/.cnpmrc"
-
-# Or alias it in .bashrc or .zshrc
-$ echo '\n#alias for cnpm\nalias cnpm="npm --registry=https://registry.npm.taobao.org \
-  --cache=$HOME/.npm/.cache/cnpm \
-  --disturl=https://npm.taobao.org/dist \
-  --userconfig=$HOME/.cnpmrc"' >> ~/.zshrc && source ~/.zshrc
-\end{lstlisting}
-
-从 registry.npm.taobao.org 安装模块时，如果发现安装的模块还没有同步过来, 淘宝 NPM 会自动在后台进行同步, 并且会让用户从官方 NPM registry.npmjs.org 进行安装. 下次再安装这个模块的时候, 就会直接从 淘宝 NPM 安装了。
-
-
-\begin{lstlisting}[language=bash]
-$ cnpm install [name]
-\end{lstlisting}
-
-直接通过 sync 命令马上同步一个模块, 注意只有 cnpm 命令行才有此功能:
-
-\begin{lstlisting}[language=bash]
-$ cnpm sync connect
-\end{lstlisting}
-
-可以直接通过 web 方式来同步: /sync/connect
-
-\begin{lstlisting}[language=bash]
-$ open https://npm.taobao.org/sync/connect
-\end{lstlisting}
-
-
-cnpm支持 npm 除了 publish 之外的所有命令, 例如：
-
-\begin{lstlisting}[language=bash]
-$ cnpm info connect
-\end{lstlisting}
-
-
-\section{Nginx}
-
-
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-
-\begin{lstlisting}[language=bash]
-
-\end{lstlisting}
-
-\section{Webpack}
-
-
-\begin{lstlisting}[language=bash]
-$ sudo npm i webpack -g
-/usr/bin/webpack -> /usr/lib/node_modules/webpack/bin/webpack.js
-$ webpack -v
-2.2.1
-\end{lstlisting}
 
 \chapter{Kitchen}
 
@@ -1299,7 +554,7 @@ export default {
   path: 'resource',
   name: 'resource',
   component: require('views/desktop/resource/resource'),
-  redirect: { name: 'resource_hotel' },
+  redirect: {name: 'resource_hotel'},
   children: [
     {
       path: 'hotel',
@@ -1312,45 +567,126 @@ export default {
       component: require('views/desktop/resource/ui_hotel/ui_hotel_detail')
     },
     {
-      path: 'airline',
+      path: 'facility',
+      name: 'resource_hotel_facility',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_facility_list')
+    },
+    {
+      path: 'facility/:facility_id',
+      name: 'resource_hotel_facility_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_facility_detail')
+    },
+    {
+      path: 'service',
+      name: 'resource_hotel_service',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_service_list')
+    },
+    {
+      path: 'service/:service_id',
+      name: 'resource_hotel_service_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_service_detail')
+    },
+    {
+      path: 'hotel_room/:room_id/:hotel_id/:tab',
+      name: 'resource_hotel_room_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_room_detail')
+    },
+    {
+      path: 'rate',
+      name: 'resource_rate',
+      component: require('views/desktop/resource/ui_hotel/ui_rate_list')
+    },
+    {
+      path: 'rate/:rate_id',
+      name: 'resource_rate_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_rate_detail')
+    },
+    {
+      path: 'traffic/:traffic_id/:hotel_id',
+      name: 'resource_hotel_traffic_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_traffic_detail')
+    },
+    {
+      path: 'tag',
+      name: 'resource_hotel_tag',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_tag_list')
+    },
+    {
+      path: 'tag/:tag_id',
+      name: 'resource_hotel_tag_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_tag_detail')
+    },
+    {
+      path: 'hotel_rate/:hotel_id/:rate_source_id/:rate_id',
+      name: 'resource_hotel_rate_detail',
+      component: require('views/desktop/resource/ui_hotel/ui_hotel_rate_detail')
+    },
+    {
+      path: 'flight',
+      redirect: {name: 'resource_airline'}
+    },
+    {
+      path: 'flight/airline',
       name: 'resource_airline',
-      components: require('views/desktop/resource/ui_airline/ui_airline_list')
+      component: require('views/desktop/resource/ui_flight/ui_airline_list')
+    },
+    {
+      path: 'flight/airline/:airline_id',
+      name: 'resource_airline_detail',
+      component: require('views/desktop/resource/ui_flight/ui_airline_detail')
+    },
+    {
+      path: 'flight/airline/:tab',
+      name: 'airline_detail',
+      component: require('views/desktop/resource/ui_flight/ui_airline_detail')
+    },
+    {
+      path: 'flight/airport',
+      name: 'resource_airport',
+      component: require('views/desktop/resource/ui_flight/ui_airport_list')
+    },
+    {
+      path: 'flight/airport/:airport_id',
+      name: 'resource_airport_detail',
+      component: require('views/desktop/resource/ui_flight/ui_airport_detail')
+    },
+    {
+      path: 'flight/airport/:tab',
+      name: 'airport_detail',
+      component: require('views/desktop/resource/ui_flight/ui_airport_detail')
+    },
+    {
+      path: 'flight/aircraft',
+      name: 'resource_aircraft',
+      component: require('views/desktop/resource/ui_flight/ui_aircraft_list')
+    },
+    {
+      path: 'flight/aircraft/:aircraft_id',
+      name: 'resource_aircraft_detail',
+      component: require('views/desktop/resource/ui_flight/ui_aircraft_detail')
+    },
+    {
+      path: 'flight/aircraft/:tab',
+      name: 'aircraft_detail',
+      component: require('views/desktop/resource/ui_flight/ui_aircraft_detail')
+    },
+    {
+      path: 'flight/list',
+      name: 'resource_flight',
+      component: require('views/desktop/resource/ui_flight/ui_flight_list')
+    },
+    {
+      path: 'flight/:flight_no',
+      name: 'resource_flight_detail',
+      component: require('views/desktop/resource/ui_flight/ui_flight_detail')
+    },
+    {
+      path: 'flight/:tab',
+      name: 'new_resource_flight',
+      component: require('views/desktop/resource/ui_flight/ui_flight_detail')
     }
   ]
 };
-\end{lstlisting}
-
-\subsection{resource.vue}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-<template>
-  <board :nav_group="nav_groups"></board>
-</template>
-
-<script>
-  export default {
-    data () {
-      return {
-        nav_groups: [
-          {
-            group_name: '酒店基本信息',
-            group_items: [
-              { name: '酒店列表', route: { name: 'resource_hotel' } }
-            ]
-          },
-          {
-            group_name: '航空公司信息',
-            group_items: [
-              { name: '航空公司列表', route: { name: 'resource_airline' } }
-            ]
-          }
-        ]
-      };
-    }
-  };
-</script>
 \end{lstlisting}
 
 
@@ -1419,30 +755,37 @@ export default {
 
 \begin{lstlisting}[language=bash]
 <template>
-  <board :nav_groups="nav_groups"></board>
+    <board :nav_groups="nav_groups"></board>
 </template>
 
 <script>
-export default {
-   data() {
+  export default {
+    data () {
       return {
-         nav_groups: [
-            {
-               group_name: '酒店基本信息',
-               group_items: [
-                   { name: '酒店列表', route: { name: 'resource_hotel' } }
-               ]
-            },
-            {
-               group_name: '航空公司列表',
-               group_items: [
-                   { name: '航空公司列表', route: { name: 'resource_airline'} }
-               ]
-            }
-         ]
-      }
-   }
-}
+        nav_groups: [
+          {
+            group_name: '酒店基本信息',
+            group_items: [
+              { name: '酒店列表', route: { name: 'resource_hotel' } },
+              { name: '酒店设施', route: { name: 'resource_hotel_facility' } },
+              { name: '酒店服务', route: { name: 'resource_hotel_service' } },
+              { name: '评分来源', route: { name: 'resource_rate' } },
+              { name: '资源标签', route: { name: 'resource_hotel_tag' } }
+            ]
+          },
+          {
+            group_name: '机票基本信息',
+            group_items: [
+              { name: '航空公司', route: { name: 'resource_airline' } },
+              { name: '机场信息', route: { name: 'resource_airport' } },
+              { name: '机型列表', route: { name: 'resource_aircraft' } },
+              { name: '航班信息', route: { name: 'resource_flight' } }
+            ]
+          }
+        ]
+      };
+    }
+  };
 </script>
 \end{lstlisting}
 
