--- a/src/vue-config.tex
+++ b/src/vue-config.tex
@@ -40,7 +40,7 @@ Vue.config.silent = true
 
 \begin{compactitem}
 \item 类型：\texttt{\{ [key: string]: Function \}}
-\item 默认值：\texttt{\{\}\}
+\item 默认值：\texttt{\{\}}
 \end{compactitem}
 
 \begin{lstlisting}[language=JavaScript]
@@ -139,694 +139,3 @@ Vue.config.keyCodes = {
 \end{lstlisting}
 
 
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
-
-
-
-\begin{lstlisting}[language=JavaScript]
-
-\end{lstlisting}
