--- a/src/vue-options.tex
+++ b/src/vue-options.tex
@@ -2,3 +2,1833 @@
 
 
 \chapter{Overview}
+
+
+\section{Deep Clone}
+
+
+
+如果需要，可以通过将 \texttt{vm.\$data}传入 \texttt{JSON.parse(JSON.stringify(...))}得到深拷贝的原始数据对象。
+
+
+\section{Shadow Clone}
+
+
+
+
+\chapter{Data}
+
+\section{data}
+
+
+data是Vue实例的数据对象，Vue将会递归地将 data 的属性转换为 getter/setter，从而让 data 的属性能够响应数据变化。
+
+
+
+\begin{compactitem}
+\item 类型：\texttt{Object|Function}
+\item 限制：组件的定义只接受function
+\end{compactitem}
+
+\subsection{Instance Data}
+
+
+Vue实例的数据对象必须是纯粹的对象(含有零个或多个的key/value对)：浏览器 API 创建的原生对象，原型上的属性会被忽略。
+
+大概来说，data 应该只能是数据 - 不推荐观察拥有状态行为的对象。
+
+
+一旦观察过，不需要再次在数据对象上添加响应式属性，因此推荐在创建实例之前，就声明所有的根级响应式属性。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+var data = { a:1 }
+
+// 直接创建一个实例
+var vm = new Vue({
+   data: data
+})
+// 等同于
+var vm = new Vue({
+   data: {
+      a: 1
+   }
+})
+
+// 测试
+vm.a // -> 1
+vm.$data === data // -> true
+
+// Vue.extend()中的data必须是函数
+var Component = Vue.extend({
+  data: function () {
+     return { a: 1}
+  }
+})
+\end{lstlisting}
+
+\begin{compactitem}
+\item Vue实例创建之后，可以通过\texttt{vm.\$data}访问原始数据对象。
+\item Vue 实例代理了 data 对象上所有的属性，因此访问 vm.a 等价于访问 vm.\$data.a。
+\end{compactitem}
+
+
+以 \_ 或 \$ 开头的属性 不会 被 Vue 实例代理，因为它们可能和 Vue 内置的属性、 API 方法冲突，可以使用例如 \texttt{vm.\$data.\_property}的方式访问这些属性。
+
+
+
+
+注意，不应该对data属性使用箭头函数（例如\texttt{data: () => \{ return \{ a: this.myProp \}\}}，理由如下：
+
+\begin{quotation}
+箭头函数绑定了父级作用域的上下文，所以 this 将不会按照期望指向 Vue 实例，this.myProp 将是 undefined。
+\end{quotation}
+
+\subsection{Component Data}
+
+
+当一个组件被定义， data 必须声明为返回一个初始数据对象的函数，因为组件可能被用来创建多个实例。
+
+\begin{compactitem}
+\item 如果 data 仍然是一个纯粹的对象，则所有的实例将共享引用同一个数据对象。
+\item 如果data是一个函数，每次创建一个新Vue实例后就能够调用 data 函数，从而返回初始数据的一个全新副本数据对象。
+\end{compactitem}
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\section{props}
+
+
+props 可以是数组或对象，用于接收来自父组件的数据。
+
+\begin{compactitem}
+\item 类型：\texttt{Array<string>|Object}
+\end{compactitem}
+
+
+
+props 可以是简单的数组，或者使用对象作为替代，对象允许配置高级选项，如类型检测、自定义校验和设置默认值。
+
+
+\begin{lstlisting}[language=JavaScript]
+// 简单语法
+Vue.component('props-demo-simple', {
+  props: ['size', 'myMessage']
+})
+
+// 对象语法，提供校验
+Vue.component('props-demo-advanced',{
+  props: {
+     // 只检测类型
+     height: Number,
+     // 检测类型 + 其他验证
+     age: {
+        type: Number
+        default: 0,
+        required: true,
+        validator: function (value) {
+           return value >= 0
+        }
+     }
+  }
+})
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+\section{propsData}
+
+propsData是创建Vue实例时传递的props，主要作用是方便测试。
+
+\begin{compactitem}
+\item 类型：\texttt{\{[key: string]: any\}}
+\item 限制：只用于 new 创建的实例中。
+\end{compactitem}
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+var Comp = Vue.extend({
+  props: ['msg'],
+  template: '<div>{{ msg }}</div>'
+})
+
+var vm = new Comp({
+   propsData: {
+      msg: 'hello'
+   }
+})
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{computed}
+
+computed计算属性将被混入到 Vue 实例中，而且所有 getter 和 setter 的 this 上下文自动地绑定为 Vue 实例。
+
+\begin{compactitem}
+\item 类型：\texttt{\{[key: string]: Function | \{get: Function, set: Function\}\}}
+\end{compactitem}
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+var vm = new Vue({
+  data: { a: 1},
+  computed: {
+     // 仅读取，值只须为函数
+     aDouble: function () {
+        return this.a * 2
+     },
+     // 读取和设置
+     aPlus: {
+        get: function () {
+          return this.a + 1
+        },
+        set: function () {
+          this.a = v - 1
+        }
+     }
+  }
+})
+vm.aPlus // -> 2
+vm.aPlus = 3
+vm.a // -> 2
+vm.aDouble // -> 4
+\end{lstlisting}
+
+
+计算属性的结果会被缓存，除非依赖的响应式属性变化才会重新计算。
+
+
+
+注意，不应该使用箭头函数来定义计算属性函数 (例如 \texttt{aDouble: () => this.a * 2})，理由是箭头函数绑定了父级作用域的上下文，所以 this 将不会按照期望指向 Vue 实例，this.a 将是 undefined。
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+\section{methods}
+
+methods将被混入到 Vue 实例中。可以直接通过 VM 实例访问这些方法，或者在指令表达式中使用。
+
+\begin{compactitem}
+\item 类型：\texttt{\{[key: string]: Function\}}
+\end{compactitem}
+
+methods的方法中的 this 自动绑定为 Vue 实例。
+
+
+\begin{lstlisting}[language=JavaScript]
+var vm = new Vue({
+   data: { a:1 },
+   methods: {
+      plus: function () {
+         this.a++
+      }
+   }
+})
+vm.plus()
+vm.a // 2
+\end{lstlisting}
+
+注意，不应该使用箭头函数来定义 method 函数 (例如 \texttt{plus: () => this.a++)}。理由是箭头函数绑定了父级作用域的上下文，所以 this 将不会按照期望指向 Vue 实例，this.a 将是 undefined。
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{watch}
+
+watch是一个对象。
+
+\begin{compactitem}
+\item 类型：\texttt{\{[key: string]:string | Function | Object\}}
+\end{compactitem}
+
+
+
+Vue 实例将会在实例化时调用 \$watch()，遍历 watch 对象的每一个属性。
+
+\begin{compactitem}
+\item watch的键是需要观察的表达式，watch的值是对应的回调函数。
+\item watch的值也可以是方法名，或者包含选项的对象。
+\end{compactitem}
+
+
+\begin{lstlisting}[language=JavaScript]
+var vm = new Vue({
+  data: {
+     a: 1,
+     b: 2,
+     c: 3
+  },
+  watch: {
+     a: function (val, oldVal) {
+        console.log('new: %s, old: %s',val, oldVal)
+     },
+     // 方法名
+     b: 'someMethod'，
+     // 深度watcher
+     c: {
+       handler: function (val, oldVal ) { /* ... */ },
+       deep: true
+     }
+  }
+})
+vm.a = 2 // -> new: 2, old: 1
+\end{lstlisting}
+
+注意，不应该使用箭头函数来定义 watcher 函数 (例如 \texttt{searchQuery: newValue => this.updateAutocomplete(newValue))}。理由是箭头函数绑定了父级作用域的上下文，所以 this 将不会按照期望指向 Vue 实例，this.updateAutocomplete 将是 undefined。
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\chapter{DOM}
+
+
+
+
+\section{el}
+
+el提供一个在页面上已存在的DOM元素作为Vue实例的挂载目标。
+
+
+\begin{compactitem}
+\item 类型：\texttt{string|HTMLElement}
+\item 限制：只在由new创建的实例中遵守
+\end{compactitem}
+
+
+el可以是CSS选择器，也可以是一个HTMLElement实例。
+
+在Vue实例挂载之后，元素就可以使用vm.\$el访问。
+
+\begin{compactitem}
+\item 如果el选项在实例化时有作用，实例将立即进入编译过程，否则，需要显式调用 vm.\$mount() 手动开启编译。
+\item el提供的元素只能作为挂载点。不同于 Vue 1.x，所有的挂载元素会被 Vue 生成的 DOM 替换，因此不推荐挂载root实例到 <html> 或者 <body> 上。
+\end{compactitem}
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\section{template}
+
+
+
+template是一个作为Vue实例的标识使用的字符串模板。
+
+
+\begin{compactitem}
+\item 类型：string
+\end{compactitem}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+默认情况下，template将会 替换 挂载的元素。挂载元素的内容都将被忽略，除非模板的内容有分发 slot。
+
+如果值以 \# 开始，则它用作选项符，将使用匹配元素的 innerHTML 作为模板。常用的技巧是用 \texttt{<script type="x-template">} 包含模板。
+
+
+出于安全考虑，应该只使用信任的 Vue 模板，避免使用其他人生成的内容作为模板。
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\section{render}
+
+
+
+
+render是字符串模板的替代方案，允许开发者发挥JavaScript 最大的编程能力。
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+render 函数接收一个 createElement 方法作为第一个参数用来创建 VNode。
+
+
+如果组件是一个函数组件，Render 函数还会接收一个额外的 context 参数，为没有实例的函数组件提供上下文信息。
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\chapter{Hook}
+
+
+所有的生命周期钩子自动绑定 this 上下文到实例中，因此可以访问数据，对属性和方法进行运算。
+
+生命周期钩子自动绑定的事实也意味着不能使用箭头函数来定义一个生命周期方法 (例如 \texttt{created: () => this.fetchTodos())}。这是因为箭头函数绑定了父上下文，因此 this 与期待的 Vue 实例不同， this.fetchTodos 的行为未定义。
+
+\section{beforeCreate}
+
+beforeCreate钩子函数在Vue实例初始化之后，数据观测(data observer) 和 event/watcher 事件配置之前被调用。
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\section{created}
+
+
+
+created钩子函数在Vue实例已经创建完成之后被调用。
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+在这一步，Vue实例已完成以下的配置：数据观测(data observer)，属性和方法的运算， watch/event 事件回调。然而，挂载阶段还没开始，\$el 属性目前不可见。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\section{beforeMount}
+
+beforeMount钩子函数在挂载开始之前被调用，相关的render函数首次被调用。
+
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+beforeMount钩子函数在服务器端渲染期间不被调用。
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+\section{mounted}
+
+
+
+mounted钩子函数在el被新创建的vm.\$el替换并挂载到实例上去之后才调用。
+
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+如果root实例挂载了一个文档内元素，那么当mounted被调用时，vm.\$el也在文档内。
+
+mounted钩子函数在服务器端渲染期间不被调用。
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+\section{beforeUpdate}
+
+
+
+beforeUpdate钩子函数在数据更新时被调用，发生在虚拟DOM重新渲染和打补丁之前。
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+可以在beforeUpdate钩子中进一步地更改状态，这不会触发附加的重渲染过程。
+
+
+beforeUpdate钩子函数在服务器端渲染期间不被调用。
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\section{updated}
+
+
+updated钩子函数在由于数据更改导致的虚拟DOM重新渲染和打补丁之后才会被调用。
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+当updated钩子函数被调用时，组件DOM已经更新，所以现在可以执行依赖于DOM的操作。
+
+不过，在大多数情况下，应该避免在此期间更改状态，因为这有可能会导致更新无限循环。
+
+updated钩子函数在服务器端渲染期间不被调用。
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{activated}
+
+
+activated钩子函数在keep-alive组件激活时被调用。
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+actived钩子函数在服务器端渲染期间不被调用。
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{deactivated}
+
+
+
+deactivated钩子函数keep-alive组件停用时被调用。
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+deactivated钩子函数在服务器端渲染期间不被调用。
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+\section{beforeDestroy}
+
+
+
+
+
+beforeDestroy钩子函数在Vue实例销毁之前被调用，在这一步时，Vue实例仍然完全可用。
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+beforeDestroy钩子函数在服务器端渲染期间不被调用。
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{destroyed}
+
+
+
+
+destroyed钩子函数在Vue实例销毁后调用。
+
+
+
+
+\begin{compactitem}
+\item 类型：Function
+\end{compactitem}
+
+调用destroyed钩子函数后，Vue实例指示的所有东西都会被解绑定，所有的事件监听器都会被移除，所有的子实例也会被销毁。
+
+destroyed钩子函数在服务器端渲染期间不被调用。
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\chapter{Resource}
+
+
+
+\section{directives}
+
+directives包含Vue实例可用指令的哈希表。
+
+\begin{compactitem}
+\item 类型：Object
+\end{compactitem}
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{filters}
+
+
+
+
+filters包含Vue实例可用过滤器的哈希表。
+
+
+\begin{compactitem}
+\item 类型：Object
+\end{compactitem}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{components}
+
+
+
+components包含Vue实例可用组件的哈希表。
+
+
+\begin{compactitem}
+\item 类型：Object
+\end{compactitem}
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\chapter{Misc}
+
+
+
+\section{parent}
+
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{mixins}
+
+
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{name}
+
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{extends}
+
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{delimiters}
+
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+\section{functional}
+
+
+
+
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+\begin{lstlisting}[language=JavaScript]
+
+\end{lstlisting}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
