--- a/src/vuenotes.tex
+++ b/src/vuenotes.tex
@@ -285,15 +285,31 @@ morestring=[b]",
 
 \include{intro}
 
+\include{vue-npm}
+
+\include{vue-config}
+
 \include{vue-binding}
 
 \include{vue-directive}
 
 \include{vue-element}
 
+\include{vue-api}
+
+\include{vue-options}
+
 \include{component}
 
+\include{component-event}
+
+\include{vue-component}
+
 \include{reactivity}
+
+\include{vue-vm}
+
+\include{vue-vnode}
 
 \include{guideline}
 
